--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
 
     <footer class="rodape">
         <div class="texto__rodape">
-            2022 - Desenvolvido por Alura.
+            2022 - Desenvolvido por Redson Júnior.
         </div>
     </footer>
 </body>
