--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <footer class="rodape">
         <div class="texto__rodape">
-            2022 - Desenvolvido por Alura.
+            2022 - Desenvolvido por Redson Júnior.
         </div>
     </footer>
 </body>
